--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,66 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Yuting Ning
+    - name: Location
+      value: Hefei, China
     - name: Languages
-      value: English, German
+      value: Chinese, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: M.S. in Computer Science
+      institution: University of Science and Technology of China (USTC), Hefei, China
+      year: 2024 (expected)
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Advised by Prof. <a href="http://staff.ustc.edu.cn/~cheneh/">Enhong Chen</a>.
+    - title: B.S in Computer Science
+      institution: University of Science and Technology of China (USTC), Hefei, China
+      year: 2021
       description:
-        - Description 1.
-        - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: University of Science and Technology of China (USTC), Hefei, China
+      year: 2021-now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+      - 'Advisor: by Prof. <a href="http://staff.ustc.edu.cn/~cheneh/">Enhong Chen</a>.'
+
+    - title: Research Intern
+      institution: Social Computing Group, Microsoft Research Asia, Beijing, China
+      year: July. - Dec. 2020
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - 'Mentor: Dr. <a href="https://www.microsoft.com/en-us/research/people/xingx/">Xing Xie</a> and Dr. <a href="https://www.microsoft.com/en-us/research/people/fangzwu/">Fangzhao Wu</a>.'
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/bigdata-ustc/EduNLP">EduNLP</a>
+      year: 2021-now
+      description: A library for advanced Natural Language Processing towards multi-modal educational items.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2022
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - 3rd place in the NeurIPS NL4Opt Competition
+        - 'Silver medal in Kaggle competition: Feedback Prize - Evaluating Student Writing (top 5%)'
+        - First Prize of Postgraduate Scholarship
+    - year: 2021
       items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
+        - First Prize of Postgraduate Scholarship
+        - Top 5% Outstanding Graduates of USTC
+        - Outstanding Graduates of Anhui Province
+    - year: 2020
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Baosteel Outstanding Student Scholarship
+    - year: 2019
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - China National Scholarship
+    - year: 2018
+      items:
+        - Gold Award for Outstanding Student Scholarship, USTC
