change theme color

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -28,7 +28,7 @@
       institution: University of Science and Technology of China (USTC), Hefei, China
       year: 2021-now
       description:
-      - 'Advisor: by Prof. <a href="http://staff.ustc.edu.cn/~cheneh/">Enhong Chen</a>.'
+      - 'Advised by Prof. <a href="http://staff.ustc.edu.cn/~cheneh/">Enhong Chen</a>.'
 
     - title: Research Intern
       institution: Social Computing Group, Microsoft Research Asia, Beijing, China
