--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -64,6 +64,9 @@
 - title: Honors and Awards
   type: time_table
   contents:
+    - year: 2023
+      items:
+        - First Prize Academic Scholarship, USTC
     - year: 2022
       items: 
         - 3rd place in the NeurIPS NL4Opt Competition
