--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -21,7 +21,7 @@
       year: 2021
       description:
 
-- title: Experience
+- title: Research Experience
   type: time_table
   contents:
     - title: Visiting Graduate Student
