--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Yuting Ning # the website title (if blank, full name will be used instead
 first_name: Yuting
 middle_name: 
 last_name: Ning
-email: ningyt@mail.ustc.edu.cn
+email: ning.151@osu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Yuting Ning's homepage.
 footer_text: >
